# home-server-navigator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  docker.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: api.rs  api_tests.rs  discovery.rs  main.rs  models.rs  state.rs  store.rs
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: EditServiceModal.tsx  LanguageSwitcher.tsx  ServiceCard.tsx  Toast.tsx
frontend/src/hooks/: useToast.ts
frontend/src/i18n/: context.tsx  index.ts  types.ts  useTranslation.ts
frontend/src/i18n/locales/: en.ts  zh.ts
frontend/src/pages/: HomePage.tsx
systemd/: home-server-navigator.env  home-server-navigator.service
