[package]
name = "home-server-navigator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your-email@example.com>"]
description = "An elegant home server service navigator with auto-discovery"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/home-server-navigator"
homepage = "https://github.com/YOUR_USERNAME/home-server-navigator"
keywords = ["home-server", "service-discovery", "dashboard", "systemd", "rust"]
categories = ["web-programming", "system-tools"]
rust-version = "1.70"

[[bin]]
name = "home-server-navigator"
path = "src/main.rs"

[profile.release]
# Optimize for size
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
strip = true         # Strip symbols
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Remove panic handling code

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
walkdir = "2.5"

[package.metadata.deb]
maintainer = "Your Name <your-email@example.com>"
copyright = "2024, Home Server Navigator Contributors"
extended-description = """\
An elegant home server service navigator that auto-discovers \
systemd services and provides a beautiful web UI for quick access."""
section = "utility"
priority = "optional"
